# gdBB

./: .gitignore  CMakeLists.txt  README.md  partitions.csv  sdkconfig
docs/: Robot Brain v3 Interface.md
help/: cmd.md
main/: App_RobotBrainV3.c  App_RobotBrainV3.h  App_SpeakState.c  App_SpeakState.h  App_Speak_Sound.c  App_Speak_Sound.h  CMakeLists.txt  Task_Chat_Continue.c  Task_Chat_Continue.h  Task_Sound_Selftest.c  Task_Sound_Selftest.h  Task_Speak_Selftest.c  Task_Speak_Selftest.h  Task_v3interface_selftest.c  Task_v3interface_selftest.h  app_main.c  idf_component.yml
